--- a/talent-studio-views/pom.xml
+++ b/talent-studio-views/pom.xml
@@ -140,6 +140,7 @@
             <groupId>javax.el</groupId>
             <artifactId>el-api</artifactId>
             <version>2.2</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>javax.servlet.jsp</groupId>
