--- a/talent-studio-views/src/main/webapp/WEB-INF/autonomy.properties
+++ b/talent-studio-views/src/main/webapp/WEB-INF/autonomy.properties
@@ -5,13 +5,13 @@
 # so we have remap the results to point to an http url, the floowing line tells us where to look
 # on the server path.
 
-autonomy.position.database=@autonomy.position.database@
-autonomy.subject.database=@autonomy.subject.database@
+autonomy.position.database=${autonomy.position.database}
+autonomy.subject.database=${autonomy.subject.database}
 
 ## taapi settings
-taapi.username=@taapi.username@
-taapi.password=@taapi.password@
-taapi.client=@taapi.client@
-taapi.url=@taapi.url@
+taapi.username=${taapi.username}
+taapi.password=${taapi.password}
+taapi.client=${taapi.client}
+taapi.url=${taapi.url}
 
-multi.tenant=@multi.tenant@
+multi.tenant=${multi.tenant}
