--- a/talent-studio-application/src/test/resources/test-jdbc.properties
+++ b/talent-studio-application/src/test/resources/test-jdbc.properties
@@ -1,3 +1,3 @@
-test.db.url=jdbc:oracle:thin:@DELL55.Rockall.dub:1521:STOC
+test.db.url=jdbc:oracle:thin:@localhost:1521:STOC
 test.db.username=tstest
 test.db.password=tstest
