partially tested the hr flow, still need to make sure approve works, still to do is the managers manager and verify the manager can complete once approved

--- a/talent-studio-views/src/main/resources/log4j.properties
+++ b/talent-studio-views/src/main/resources/log4j.properties
@@ -46,16 +46,16 @@ log4j.appender.springlog.layout=org.apache.log4j.PatternLayout
 log4j.appender.springlog.layout.ConversionPattern=**** %d{dd-MM-yyy HH:mm:ss.SSS} %p (%l)%n        %m%n
 
 # Set default log levels
-log4j.rootLogger=ERROR, logfile
+log4j.rootLogger=ERROR, logfile, stdout
 
 ## all error logging
-log4j.logger.com.zynap.talentstudio.*=ERROR, logfile
+log4j.logger.com.zynap.talentstudio.*=ERROR, logfile, stdout
 
 ## logging for security interceptor
 log4j.logger.com.zynap.talentstudio.web.security.SecurityInterceptor=OFF, logfile
 
 ## logging for ErrorTag
-log4j.logger.com.zynap.talentstudio.web.utils.ErrorTag=ERROR, logfile
+log4j.logger.com.zynap.talentstudio.web.utils.ErrorTag=ERROR, logfile, stdout
 
 ## logging for integration classes
 log4j.logger.com.zynap.talentstudio.integration=ERROR, logfile
