completed decimal tweaks

--- a/talent-studio-views/src/main/properties/log4j.properties
+++ b/talent-studio-views/src/main/properties/log4j.properties
@@ -49,7 +49,7 @@ log4j.appender.springlog.layout.ConversionPattern=**** %d{dd-MM-yyy HH:mm:ss.SSS
 log4j.rootLogger=ERROR, logfile, stdout
 
 ## all error logging
-log4j.logger.com.zynap.talentstudio.*=INFO, ERROR, logfile, stdout
+log4j.logger.com.zynap.talentstudio.*=ERROR, logfile, stdout
 
 ## logging for security interceptor
 log4j.logger.com.zynap.talentstudio.web.security.SecurityInterceptor=OFF, logfile
@@ -64,7 +64,7 @@ log4j.logger.com.zynap.talentstudio.integration=ERROR, logfile
 log4j.logger.net.sf.hibernate.SQL=DEBUG, hibernatelog
 
 ## log Spring framework to separate log file
-log4j.logger.org.springframework=INFO, ERROR, springlog
+log4j.logger.org.springframework=ERROR, springlog
 
 #DWR
 log4j.logger.org.directwebremoting=OFF, logfile
