--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ build
 target
 distribution
 .idea
+.ideaDataSources
 config-inspection.log
 talent-studio-views/src/main/webapp/images/Thumbs.db
 talent-studio-views/src/main/webapp/images/tree/Thumbs.db
