--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,6 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
-    <!-- todo this will change -->
     <groupId>com.zynap</groupId>
     <artifactId>talent-studio</artifactId>
     <version>5.4.8-SNAPSHOT</version>
@@ -16,12 +15,12 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <build.date.time>${maven.build.timestamp}</build.date.time>
         <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
-        <build.user>dhanson</build.user>
+        <build.user>bcassidy</build.user>
         <build.version>v5.4.8</build.version>
         <!--build number is incremented for each deployment-->
         <build.num>1.0</build.num>
         <build.info>${build.version}-${build.num} ${build.user} ${build.date.time}</build.info>
-        <build.year>2015</build.year>
+        <build.year>2017</build.year>
         <hibernate.version>2.1.8</hibernate.version>
         <spring.sec.version>3.2.9.RELEASE</spring.sec.version>
         <spring.version>3.2.9.RELEASE</spring.version>
