--- a/talent-studio-views/pom.xml
+++ b/talent-studio-views/pom.xml
@@ -40,7 +40,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
-            <version>${spring.sec.version}</version>
+            <version>3.2.9.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>cewolf</groupId>
