WIP adding my dashboard and some refactoring - spec pattern

--- a/talent-studio-views/src/main/properties/ts-views.properties
+++ b/talent-studio-views/src/main/properties/ts-views.properties
@@ -365,6 +365,8 @@ viewmyhomepagedetails.url=/WEB-INF/jsp/talentarena/viewmydetailshome.jsp
 viewmyhomepagedashboard.(class)=org.springframework.web.servlet.view.JstlView
 viewmyhomepagedashboard.url=/WEB-INF/jsp/talentarena/viewmydashboardhome.jsp
 
+editmydashboard.attributesCSV=top=[no_imgheader.jsp],userinfo=[userinfo.jsp],arenanav=[arenanav.jsp],nav=[navigation.jsp],content=[../dashboard/mydashboardform.jsp],footer=[footer.jsp],title=[title.edit.dashboard]
+
 viewmyhomepageportfolio.(class)=org.springframework.web.servlet.view.JstlView
 viewmyhomepageportfolio.url=/WEB-INF/jsp/talentarena/viewmyportfoliohome.jsp
 
