dashboard series chart in progress- adding the save

--- a/talent-studio-views/src/main/properties/ts-views.properties
+++ b/talent-studio-views/src/main/properties/ts-views.properties
@@ -365,7 +365,9 @@ viewmyhomepagedetails.url=/WEB-INF/jsp/talentarena/viewmydetailshome.jsp
 viewmyhomepagedashboard.(class)=org.springframework.web.servlet.view.JstlView
 viewmyhomepagedashboard.url=/WEB-INF/jsp/talentarena/viewmydashboardhome.jsp
 
-editmydashboard.attributesCSV=top=[no_imgheader.jsp],userinfo=[userinfo.jsp],arenanav=[arenanav.jsp],nav=[navigation.jsp],content=[../dashboard/mydashboardform.jsp],footer=[footer.jsp],title=[title.edit.dashboard]
+editmydashboard.attributesCSV=top=[no_imgheader.jsp],userinfo=[userinfo.jsp],arenanav=[arenanav.jsp],nav=[navigation.jsp],content=[../dashboard/mydashboardform.jsp],footer=[footer.jsp],title=[title.edit.dashboard.addchart]
+mydashboardattributes.(class)=org.springframework.web.servlet.view.JstlView
+mydashboardattributes.url=/WEB-INF/jsp/dashboard/mydashboardattributesnippet.jsp
 
 viewmyhomepageportfolio.(class)=org.springframework.web.servlet.view.JstlView
 viewmyhomepageportfolio.url=/WEB-INF/jsp/talentarena/viewmyportfoliohome.jsp
