--- a/talent-studio-views/src/main/properties/ts-views.properties
+++ b/talent-studio-views/src/main/properties/ts-views.properties
@@ -369,6 +369,9 @@ editmydashboard.attributesCSV=top=[no_imgheader.jsp],userinfo=[userinfo.jsp],are
 mydashboardattributes.(class)=org.springframework.web.servlet.view.JstlView
 mydashboardattributes.url=/WEB-INF/jsp/dashboard/mydashboardattributesnippet.jsp
 
+mydashboardseries.(class)=org.springframework.web.servlet.view.JstlView
+mydashboardseries.url=/WEB-INF/jsp/dashboard/mydashboardseriessnippet.jsp
+
 viewmyhomepageportfolio.(class)=org.springframework.web.servlet.view.JstlView
 viewmyhomepageportfolio.url=/WEB-INF/jsp/talentarena/viewmyportfoliohome.jsp
 
